--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4",
-    "sweetalert2": "^11.26.3",
+    "react-router-dom": "^7.10.1",
+    "sweetalert2": "^11.26.10",
     "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
@@ -29,6 +29,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "baseline-browser-mapping": "^2.9.7",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
